# Level-Devil

./: .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
.github/workflows/: build.yml
code/: CMakeLists.txt
code/app/: App.cpp  App.h
code/common/: Entity.h  frame.h  game_map.h  notifier.cpp  notifier.h  property_ids.h
code/model/: entity_model.cpp  entity_model.h  entity_model_test.cpp  level1.json  level2.json  level3.json  level4.json  object.cpp  object.h
code/tests/: collision_test.cpp  entity_model_test.cpp  level_loading_test.cpp  object_test.cpp
code/view/: MainWindow.cpp  MainWindow.h
code/view/widgets/: GameStateWidget.cpp  GameStateWidget.h  GameWidget.cpp  GameWidget.h
code/view_model/: entity_view_model.cpp  entity_view_model.h  game_view_model.cpp  game_view_model.h
